--- a/app/src/main/res/layout/activity_get_big_expense_plan.xml
+++ b/app/src/main/res/layout/activity_get_big_expense_plan.xml
@@ -40,8 +40,11 @@
         android:id="@+id/textViewGetBigExpensePlanTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
         android:text="@string/title_choose_big_expense_plan"
-        android:textSize="24sp"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline36"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -64,6 +67,7 @@
         android:id="@+id/textViewGetBigExpensePlanIncomeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:text="@string/label_plan_incomes"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline35"
@@ -75,6 +79,7 @@
         android:id="@+id/textViewGetBigExpensePlanSavingsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:text="@string/label_plan_savings"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline35"
@@ -86,6 +91,7 @@
         android:id="@+id/textViewGetBigExpensePlanLoanTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:text="@string/label_plan_loan"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline35"
@@ -104,11 +110,12 @@
         android:id="@+id/textViewGetBigExpensePlanRatio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:lineSpacingExtra="8sp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline31"
-        tools:text="Ratio \n 50 : 50" />
+        tools:text="\tRatio \n 50 : 50" />
 </androidx.constraintlayout.widget.ConstraintLayout>
