--- a/app/src/main/res/layout/activity_initialize_user.xml
+++ b/app/src/main/res/layout/activity_initialize_user.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:hint="@string/hint_salary"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/editTextInitialSavings"
@@ -25,6 +27,8 @@
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:hint="@string/hint_current_savings"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/buttonInitialManageRecurring"
@@ -36,8 +40,11 @@
         android:id="@+id/textViewInitializeUserTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
         android:text="@string/title_initialize"
+        android:textColor="#000000"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline42"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -47,6 +54,7 @@
         android:id="@+id/buttonInitialManageRecurring"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:text="@string/button_text_salary_bill"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +65,7 @@
         android:id="@+id/buttonInitialOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:text="@string/button_text_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
