--- a/app/src/main/res/layout/cell_big_expense_plan.xml
+++ b/app/src/main/res/layout/cell_big_expense_plan.xml
@@ -30,7 +30,8 @@
                 android:id="@+id/textViewBigExpensePlanSavingsAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:fontFamily="sans-serif-black"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewBigExpensePlanIncomesAmount"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -43,7 +44,8 @@
                 android:id="@+id/textViewBigExpensePlanIncomesAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:fontFamily="sans-serif-black"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -55,7 +57,8 @@
                 android:id="@+id/textViewBigExpensePlanLoanAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:fontFamily="sans-serif-black"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewBigExpensePlanSavingsAmount"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
