--- a/app/src/main/res/layout/fragment_expense_tracker.xml
+++ b/app/src/main/res/layout/fragment_expense_tracker.xml
@@ -11,9 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:fontFamily="sans-serif-condensed"
         android:text="Today remaining"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textViewTodayAllowedTitle"
         app:layout_constraintEnd_toStartOf="@+id/guideline24"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,8 +24,11 @@
         android:id="@+id/textViewSavingsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:text="Savings"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textViewIncomeTitle"
         app:layout_constraintEnd_toEndOf="@+id/textViewTodayAllowedTitle"
         app:layout_constraintTop_toBottomOf="@+id/textViewTodayAllowedTitle" />
@@ -32,8 +37,11 @@
         android:id="@+id/textViewTodayAllowedTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:text="Today available"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textViewSavingsTitle"
         app:layout_constraintEnd_toEndOf="@+id/textViewTodayRemainingTitle"
         app:layout_constraintTop_toBottomOf="@+id/textViewTodayRemainingTitle" />
@@ -42,8 +50,11 @@
         android:id="@+id/textViewIncomeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:text="Income"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewTransaction"
         app:layout_constraintEnd_toEndOf="@+id/textViewSavingsTitle"
         app:layout_constraintTop_toBottomOf="@+id/textViewSavingsTitle" />
@@ -61,16 +72,19 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline27" />
+        app:layout_constraintTop_toTopOf="@+id/guideline27"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textViewTodayRemainingAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:textSize="18sp"
+        android:textColor="@color/teal_200"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textViewTodayAllowedAmount"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
         app:layout_constraintTop_toTopOf="parent"
@@ -80,7 +94,10 @@
         android:id="@+id/textViewSavingsAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/teal_200"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textViewIncomeAmount"
         app:layout_constraintStart_toStartOf="@+id/textViewTodayAllowedAmount"
         app:layout_constraintTop_toBottomOf="@+id/textViewTodayAllowedAmount"
@@ -90,7 +107,9 @@
         android:id="@+id/textViewTodayAllowedAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textColor="@color/teal_200"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textViewSavingsAmount"
         app:layout_constraintStart_toStartOf="@+id/textViewTodayRemainingAmount"
         app:layout_constraintTop_toBottomOf="@+id/textViewTodayRemainingAmount"
@@ -100,7 +119,9 @@
         android:id="@+id/textViewIncomeAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textColor="@color/teal_200"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewTransaction"
         app:layout_constraintStart_toStartOf="@+id/textViewSavingsAmount"
         app:layout_constraintTop_toBottomOf="@+id/textViewSavingsAmount"
