--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:hint="@string/hint_password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/editTextEditUserVerifyPassword"
@@ -25,6 +27,8 @@
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:hint="@string/hint_verify_password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/buttonEditUserOK"
@@ -38,6 +42,8 @@
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:hint="@string/hint_old_password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/editTextEditUserPassword"
@@ -49,11 +55,14 @@
         android:id="@+id/textViewEditUserTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_edit_account"
-        android:textSize="30sp"
+        android:text="@string/title_create_account"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="#000000"
+        android:fontFamily="sans-serif-black"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/editTextEditUserEmail"
@@ -61,6 +70,8 @@
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:hint="@string/hint_email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/editTextEditUserOldPassword"
@@ -86,6 +97,8 @@
         android:id="@+id/buttonEditUserOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:text="@string/button_text_ok"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
