--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,42 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
     tools:context=".activity.user.LoginActivity"
 
     >
 
 
     <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="84dp"
-        android:background="@drawable/custom_button"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center"
-        android:text="@string/button_text_login"
-        android:textColor="#53bce9"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <Button
         android:id="@+id/textViewCreateAccount"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="72dp"
+        android:layout_width="190dp"
+        android:layout_height="33dp"
+        android:layout_marginEnd="44dp"
         android:background="@drawable/custom_button"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:text="@string/button_text_create_account"
-        android:textColor="#53bce9"
+        android:textColor="#FFFFFF"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toEndOf="@+id/buttonLogin"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+    <Button
+        android:id="@+id/buttonLogin"
+        android:layout_width="110dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="44dp"
+        android:background="@drawable/custom_button"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:text="@string/button_text_login"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <EditText
@@ -95,7 +92,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/menu_item_expense_tracker"
-        android:textColor="#919191"
+        android:textColor="#000000"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +128,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-condensed"
         android:text="@string/title_item_welcome"
-        android:textColor="#E1A6A6A6"
+        android:textColor="#6E6E6E"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
