--- a/app/src/main/res/layout/cell_big_expense.xml
+++ b/app/src/main/res/layout/cell_big_expense.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/textViewBigExpenseDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/textViewBigExpenseAmount"
@@ -34,7 +35,9 @@
                 android:id="@+id/textViewBigExpenseSavingsAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewBigExpenseIncomesAmount"
                 app:layout_constraintEnd_toStartOf="@+id/textViewBigExpenseLoanAmount"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -46,7 +49,9 @@
                 android:id="@+id/textViewBigExpenseLoanAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewBigExpenseSavingsAmount"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -58,7 +63,9 @@
                 android:id="@+id/textViewBigExpenseAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/textViewBigExpenseIncomesAmount"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -70,7 +77,9 @@
                 android:id="@+id/textViewBigExpenseIncomesAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewBigExpenseAmount"
                 app:layout_constraintEnd_toStartOf="@+id/textViewBigExpenseSavingsAmount"
                 app:layout_constraintHorizontal_bias="0.5"
