--- a/app/src/main/res/layout/cell_category.xml
+++ b/app/src/main/res/layout/cell_category.xml
@@ -17,7 +17,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#46C3C3C3">
 
             <TextView
                 android:id="@+id/textViewCategoryName"
