--- a/app/src/main/res/layout/cell_transaction.xml
+++ b/app/src/main/res/layout/cell_transaction.xml
@@ -52,7 +52,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-condensed"
-                android:textColor="@color/teal_700"
+                android:textColor="@android:color/holo_red_dark"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
