--- a/app/src/main/res/layout/fragment_report_line_chart.xml
+++ b/app/src/main/res/layout/fragment_report_line_chart.xml
@@ -19,6 +19,7 @@
         android:id="@+id/lineChart"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#46C3C3C3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
