--- a/app/src/main/res/layout/fragment_report_pie_chart.xml
+++ b/app/src/main/res/layout/fragment_report_pie_chart.xml
@@ -25,6 +25,7 @@
         android:id="@+id/pieChartIncome"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#46C3C3C3"
         app:layout_constraintBottom_toTopOf="@+id/guideline45"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +35,7 @@
         android:id="@+id/pieChartExpense"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#46C3C3C3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
