--- a/app/src/main/res/layout/fragment_report_text.xml
+++ b/app/src/main/res/layout/fragment_report_text.xml
@@ -10,8 +10,9 @@
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
+        android:layout_marginStart="60dp"
+        android:background="#46C3C3C3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
